--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "virk,poppinss",
   "license": "MIT",
   "devDependencies": {
+    "@adonisjs/fold": "^6.0.3",
     "@adonisjs/mrm-preset": "^2.0.3",
     "@types/node": "^12.0.3",
     "commitizen": "^3.1.1",
@@ -69,6 +70,7 @@
     "anyBranch": false
   },
   "dependencies": {
+    "@poppinss/utils": "^1.0.3",
     "emittery": "^0.4.1"
   }
 }
