chore(package): define main field

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@adonisjs/events",
   "version": "1.0.5",
   "description": "Event emitter with asynchronous events",
+  "main": "build/providers/EventProvider.js",
   "files": [
     "build/adonis-typings",
     "build/providers",
