--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"japa": "^3.1.1",
 		"mrm": "^2.3.3",
 		"np": "^6.2.5",
+		"npm-audit-html": "^1.4.1",
 		"prettier": "^2.0.5",
 		"ts-node": "^8.10.2",
 		"typescript": "^3.9.6"
@@ -59,7 +60,7 @@
 	},
 	"husky": {
 		"hooks": {
-			"pre-commit": "doctoc README.md --title='## Table of contents' && git add README.md",
+			"pre-commit": "doctoc README.md --title='## Table of contents' && git add README.md && npm audit --production --json | ./node_modules/.bin/npm-audit-html && git add npm-audit.html",
 			"commit-msg": "node ./node_modules/@adonisjs/mrm-preset/validateCommit/conventional/validate.js"
 		}
 	},
