--- a/package.json
+++ b/package.json
@@ -32,25 +32,26 @@
 	"author": "virk,adonisjs",
 	"license": "MIT",
 	"devDependencies": {
-		"@adonisjs/fold": "^6.3.5",
+		"@adonisjs/application": "^3.0.5",
 		"@adonisjs/mrm-preset": "^2.4.0",
-		"@types/node": "^14.0.23",
-		"commitizen": "^4.1.2",
-		"cz-conventional-changelog": "^3.2.0",
+		"@adonisjs/require-ts": "^1.0.0",
+		"@poppinss/dev-utils": "^1.0.10",
+		"@types/node": "^14.11.2",
+		"commitizen": "^4.2.1",
+		"cz-conventional-changelog": "^3.3.0",
 		"del-cli": "^3.0.1",
-		"eslint": "^7.5.0",
-		"eslint-config-prettier": "^6.11.0",
-		"eslint-plugin-adonis": "^1.0.14",
+		"eslint": "^7.10.0",
+		"eslint-config-prettier": "^6.12.0",
+		"eslint-plugin-adonis": "^1.0.15",
 		"eslint-plugin-prettier": "^3.1.4",
 		"github-label-sync": "^2.0.0",
-		"husky": "^4.2.5",
+		"husky": "^4.3.0",
 		"japa": "^3.1.1",
-		"mrm": "^2.3.3",
-		"np": "^6.3.2",
-		"npm-audit-html": "^1.4.1",
-		"prettier": "^2.0.5",
-		"ts-node": "^8.10.2",
-		"typescript": "^3.9.7"
+		"mrm": "^2.5.1",
+		"np": "^6.5.0",
+		"npm-audit-html": "^1.4.3",
+		"prettier": "^2.1.2",
+		"typescript": "^4.0.3"
 	},
 	"nyc": {
 		"exclude": [
@@ -77,6 +78,9 @@
 	},
 	"dependencies": {
 		"emittery": "^0.7.1"
+	},
+	"peerDependencies": {
+		"@adonisjs/application": "^3.0.0"
 	},
 	"directories": {
 		"doc": "docs",
