chore: use latest tag for publishing to npm

--- a/package.json
+++ b/package.json
@@ -96,6 +96,6 @@
 	"homepage": "https://github.com/adonisjs/events#readme",
 	"publishConfig": {
 		"access": "public",
-		"tag": "next"
+		"tag": "latest"
 	}
 }
