--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   "scripts": {
     "mrm": "mrm --preset=@adonisjs/mrm-preset",
     "pretest": "npm run lint",
-    "test": "node japaFile.js",
+    "test": "node .bin/test.js",
     "clean": "del build",
     "compile": "npm run lint && npm run clean && tsc",
     "build": "npm run compile",
     "commit": "git-cz",
-    "release": "np",
+    "release": "np --message=\"chore(release): %s\"",
     "version": "npm run build",
     "format": "prettier --write .",
     "prepublishOnly": "npm run build",
@@ -33,18 +33,20 @@
   "license": "MIT",
   "devDependencies": {
     "@adonisjs/application": "^5.1.5",
-    "@adonisjs/mrm-preset": "^4.1.2",
+    "@adonisjs/mrm-preset": "^5.0.2",
     "@adonisjs/require-ts": "^2.0.7",
-    "@poppinss/dev-utils": "^1.1.5",
-    "@types/node": "^16.3.3",
+    "@poppinss/dev-utils": "^2.0.1",
+    "@types/node": "^17.0.8",
+    "commitizen": "^4.2.4",
+    "cz-conventional-changelog": "^3.3.0",
     "del-cli": "^4.0.1",
-    "eslint": "^7.31.0",
+    "eslint": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-adonis": "^1.3.3",
-    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-adonis": "^2.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "github-label-sync": "^2.0.1",
     "husky": "^7.0.1",
-    "japa": "^3.1.1",
+    "japa": "^4.0.0",
     "mrm": "^3.0.2",
     "np": "^7.5.0",
     "prettier": "^2.3.2",
@@ -88,5 +90,48 @@
   "publishConfig": {
     "access": "public",
     "tag": "latest"
+  },
+  "mrmConfig": {
+    "core": true,
+    "license": "MIT",
+    "services": [
+      "github-actions"
+    ],
+    "minNodeVersion": "14.15.4",
+    "probotApps": [
+      "stale",
+      "lock"
+    ],
+    "runGhActionsOnWindows": false
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:adonis/typescriptPackage",
+      "prettier"
+    ],
+    "plugins": [
+      "prettier"
+    ],
+    "rules": {
+      "prettier/prettier": [
+        "error",
+        {
+          "endOfLine": "auto"
+        }
+      ]
+    }
+  },
+  "eslintIgnore": [
+    "build"
+  ],
+  "prettier": {
+    "trailingComma": "es5",
+    "semi": false,
+    "singleQuote": true,
+    "useTabs": false,
+    "quoteProps": "consistent",
+    "bracketSpacing": true,
+    "arrowParens": "always",
+    "printWidth": 100
   }
 }
