--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "scripts": {
     "mrm": "mrm --preset=@adonisjs/mrm-preset",
     "pretest": "npm run lint",
-    "test": "node .bin/test.js",
-    "clean": "del build",
+    "test": "node -r ts-node/register/transpile-only .bin/test.ts",
+    "clean": "del-cli build",
     "compile": "npm run lint && npm run clean && tsc",
     "build": "npm run compile",
     "commit": "git-cz",
@@ -35,6 +35,10 @@
     "@adonisjs/application": "^5.1.5",
     "@adonisjs/mrm-preset": "^5.0.2",
     "@adonisjs/require-ts": "^2.0.7",
+    "@japa/assert": "^1.2.3",
+    "@japa/run-failed-tests": "^1.0.3",
+    "@japa/runner": "^1.2.0",
+    "@japa/spec-reporter": "^1.1.7",
     "@poppinss/dev-utils": "^2.0.1",
     "@types/node": "^17.0.8",
     "commitizen": "^4.2.4",
@@ -46,10 +50,10 @@
     "eslint-plugin-prettier": "^4.0.0",
     "github-label-sync": "^2.0.1",
     "husky": "^7.0.1",
-    "japa": "^4.0.0",
     "mrm": "^3.0.2",
     "np": "^7.5.0",
     "prettier": "^2.3.2",
+    "ts-node": "^10.5.0",
     "typescript": "^4.3.5"
   },
   "nyc": {
