refactor: rename .bin diectory to bin

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "mrm": "mrm --preset=@adonisjs/mrm-preset",
     "pretest": "npm run lint",
-    "test": "node -r ts-node/register/transpile-only .bin/test.ts",
+    "test": "node -r @adonisjs/require-ts/build/register bin/test.ts",
     "clean": "del-cli build",
     "compile": "npm run lint && npm run clean && tsc",
     "build": "npm run compile",
@@ -53,7 +53,6 @@
     "mrm": "^4.0.0",
     "np": "^7.5.0",
     "prettier": "^2.3.2",
-    "ts-node": "^10.5.0",
     "typescript": "^4.3.5"
   },
   "nyc": {
