--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@adonisjs/events",
   "version": "7.2.1",
-  "description": "Event emitter with asynchronous events",
+  "description": "An implementation of the event emitter built on top of emittery",
   "main": "build/index.js",
   "type": "module",
   "files": [
@@ -37,7 +37,7 @@
   "author": "virk,adonisjs",
   "license": "MIT",
   "devDependencies": {
-    "@adonisjs/application": "^6.0.2-0",
+    "@adonisjs/application": "^6.0.3-0",
     "@commitlint/cli": "^17.2.0",
     "@commitlint/config-conventional": "^17.2.0",
     "@japa/assert": "^1.3.6",
