--- a/package.json
+++ b/package.json
@@ -37,16 +37,20 @@
   "author": "virk,adonisjs",
   "license": "MIT",
   "devDependencies": {
-    "@adonisjs/application": "^6.0.3-0",
-    "@commitlint/cli": "^17.2.0",
-    "@commitlint/config-conventional": "^17.2.0",
+    "@adonisjs/application": "^6.1.0-0",
+    "@adonisjs/config": "^4.1.0-0",
+    "@adonisjs/env": "^4.0.2-0",
+    "@adonisjs/fold": "^9.3.1-0",
+    "@adonisjs/logger": "^5.0.1-0",
+    "@commitlint/cli": "^17.3.0",
+    "@commitlint/config-conventional": "^17.3.0",
     "@japa/assert": "^1.3.6",
     "@japa/expect-type": "^1.0.2",
     "@japa/run-failed-tests": "^1.1.0",
     "@japa/runner": "^2.2.2",
     "@japa/spec-reporter": "^1.3.2",
     "@poppinss/dev-utils": "^2.0.1",
-    "@swc/core": "^1.3.18",
+    "@swc/core": "^1.3.20",
     "@types/fs-extra": "^9.0.13",
     "@types/node": "^18.11.9",
     "c8": "^7.12.0",
@@ -55,11 +59,11 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-adonis": "^3.0.3",
     "eslint-plugin-prettier": "^4.2.1",
-    "fs-extra": "^10.1.0",
+    "fs-extra": "^11.0.0",
     "github-label-sync": "^2.0.1",
     "husky": "^8.0.2",
     "np": "^7.6.2",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
   },
@@ -67,7 +71,8 @@
     "emittery": "^1.0.1"
   },
   "peerDependencies": {
-    "@adonisjs/application": "^6.0.1-0"
+    "@adonisjs/application": "^6.1.0-0",
+    "@adonisjs/fold": "^9.3.1-0"
   },
   "repository": {
     "type": "git",
