--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "pretest": "npm run lint",
-    "test": "c8 npm run vscode:test",
+    "test": "cross-env NODE_DEBUG=adonisjs:events c8 npm run vscode:test",
     "clean": "del-cli build",
     "compile": "npm run lint && npm run clean && tsc",
     "build": "npm run compile",
@@ -37,11 +37,11 @@
   "author": "virk,adonisjs",
   "license": "MIT",
   "devDependencies": {
-    "@adonisjs/application": "^6.1.0-0",
-    "@adonisjs/config": "^4.1.0-0",
-    "@adonisjs/env": "^4.0.2-0",
-    "@adonisjs/fold": "^9.3.1-0",
-    "@adonisjs/logger": "^5.0.1-0",
+    "@adonisjs/application": "^6.1.2-0",
+    "@adonisjs/config": "^4.1.1-0",
+    "@adonisjs/env": "^4.0.3-0",
+    "@adonisjs/fold": "^9.4.1-0",
+    "@adonisjs/logger": "^5.0.2-0",
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
     "@japa/assert": "^1.3.6",
@@ -50,16 +50,17 @@
     "@japa/runner": "^2.2.2",
     "@japa/spec-reporter": "^1.3.2",
     "@poppinss/dev-utils": "^2.0.1",
-    "@swc/core": "^1.3.20",
+    "@swc/core": "^1.3.21",
     "@types/fs-extra": "^9.0.13",
-    "@types/node": "^18.11.9",
+    "@types/node": "^18.11.10",
     "c8": "^7.12.0",
+    "cross-env": "^7.0.3",
     "del-cli": "^5.0.0",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-adonis": "^3.0.3",
     "eslint-plugin-prettier": "^4.2.1",
-    "fs-extra": "^11.0.0",
+    "fs-extra": "^11.1.0",
     "github-label-sync": "^2.0.1",
     "husky": "^8.0.2",
     "np": "^7.6.2",
@@ -71,8 +72,7 @@
     "emittery": "^1.0.1"
   },
   "peerDependencies": {
-    "@adonisjs/application": "^6.1.0-0",
-    "@adonisjs/fold": "^9.3.1-0"
+    "@adonisjs/fold": "^9.4.1-0"
   },
   "repository": {
     "type": "git",
