--- a/package.json
+++ b/package.json
@@ -37,11 +37,11 @@
   "author": "virk,adonisjs",
   "license": "MIT",
   "devDependencies": {
-    "@adonisjs/application": "^6.1.2-0",
+    "@adonisjs/application": "^6.2.0-0",
     "@adonisjs/config": "^4.1.1-0",
     "@adonisjs/env": "^4.0.3-0",
-    "@adonisjs/fold": "^9.4.1-0",
-    "@adonisjs/logger": "^5.0.2-0",
+    "@adonisjs/fold": "^9.5.0-0",
+    "@adonisjs/logger": "^5.1.0-0",
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
     "@japa/assert": "^1.3.6",
@@ -50,13 +50,13 @@
     "@japa/runner": "^2.2.2",
     "@japa/spec-reporter": "^1.3.2",
     "@poppinss/dev-utils": "^2.0.1",
-    "@swc/core": "^1.3.21",
+    "@swc/core": "^1.3.22",
     "@types/fs-extra": "^9.0.13",
-    "@types/node": "^18.11.10",
+    "@types/node": "^18.11.12",
     "c8": "^7.12.0",
     "cross-env": "^7.0.3",
     "del-cli": "^5.0.0",
-    "eslint": "^8.28.0",
+    "eslint": "^8.29.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-adonis": "^3.0.3",
     "eslint-plugin-prettier": "^4.2.1",
@@ -64,15 +64,16 @@
     "github-label-sync": "^2.0.1",
     "husky": "^8.0.2",
     "np": "^7.6.2",
-    "prettier": "^2.8.0",
+    "prettier": "^2.8.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.4"
   },
   "dependencies": {
     "emittery": "^1.0.1"
   },
   "peerDependencies": {
-    "@adonisjs/fold": "^9.4.1-0"
+    "@adonisjs/fold": "^9.5.0-0",
+    "@adonisjs/application": "^6.2.0-0"
   },
   "repository": {
     "type": "git",
