--- a/package.json
+++ b/package.json
@@ -37,10 +37,10 @@
   "author": "virk,adonisjs",
   "license": "MIT",
   "devDependencies": {
-    "@adonisjs/application": "^6.2.0-0",
-    "@adonisjs/config": "^4.1.1-0",
-    "@adonisjs/env": "^4.0.3-0",
-    "@adonisjs/fold": "^9.5.0-0",
+    "@adonisjs/application": "^6.3.1-0",
+    "@adonisjs/config": "^4.1.2-0",
+    "@adonisjs/env": "^4.1.0-0",
+    "@adonisjs/fold": "^9.6.0-0",
     "@adonisjs/logger": "^5.1.0-0",
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
@@ -52,7 +52,7 @@
     "@poppinss/dev-utils": "^2.0.1",
     "@swc/core": "^1.3.22",
     "@types/fs-extra": "^9.0.13",
-    "@types/node": "^18.11.12",
+    "@types/node": "^18.11.13",
     "c8": "^7.12.0",
     "cross-env": "^7.0.3",
     "del-cli": "^5.0.0",
@@ -72,8 +72,8 @@
     "emittery": "^1.0.1"
   },
   "peerDependencies": {
-    "@adonisjs/fold": "^9.5.0-0",
-    "@adonisjs/application": "^6.2.0-0"
+    "@adonisjs/application": "^6.3.1-0",
+    "@adonisjs/fold": "^9.6.0-0"
   },
   "repository": {
     "type": "git",
