feat: add emitter test factory

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "files": [
     "build/src",
+    "build/test_factories",
     "build/index.d.ts",
     "build/index.js"
   ],
@@ -14,6 +15,7 @@
   },
   "exports": {
     ".": "./build/index.js",
+    "./test_factories/*": "./build/test_factories/*.js",
     "./types": "./build/src/types.js"
   },
   "scripts": {
