--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   "author": "virk,adonisjs",
   "license": "MIT",
   "devDependencies": {
-    "@adonisjs/application": "^6.7.0-0",
+    "@adonisjs/application": "^6.8.0-0",
     "@adonisjs/config": "^4.1.3-0",
     "@adonisjs/env": "^4.1.2-0",
     "@adonisjs/fold": "^9.9.0-0",
@@ -71,10 +71,11 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@sindresorhus/is": "^5.3.0",
     "emittery": "^1.0.1"
   },
   "peerDependencies": {
-    "@adonisjs/application": "^6.7.0-0",
+    "@adonisjs/application": "^6.8.0-0",
     "@adonisjs/fold": "^9.9.0-0"
   },
   "repository": {
