--- a/package.json
+++ b/package.json
@@ -48,12 +48,12 @@
     "@commitlint/config-conventional": "^17.4.2",
     "@japa/assert": "^1.4.1",
     "@japa/expect-type": "^1.0.3",
+    "@japa/file-system": "^1.0.1",
     "@japa/run-failed-tests": "^1.1.1",
     "@japa/runner": "^2.3.0",
     "@japa/spec-reporter": "^1.3.3",
     "@poppinss/dev-utils": "^2.0.1",
     "@swc/core": "^1.3.35",
-    "@types/fs-extra": "^11.0.1",
     "@types/node": "^18.13.0",
     "c8": "^7.12.0",
     "cross-env": "^7.0.3",
@@ -62,7 +62,6 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-adonis": "^3.0.3",
     "eslint-plugin-prettier": "^4.2.1",
-    "fs-extra": "^11.1.0",
     "github-label-sync": "^2.0.1",
     "husky": "^8.0.3",
     "np": "^7.6.3",
