--- a/package.json
+++ b/package.json
@@ -41,9 +41,7 @@
   "devDependencies": {
     "@adonisjs/application": "^7.1.2-1",
     "@adonisjs/config": "^4.2.1-0",
-    "@adonisjs/env": "^4.2.0-0",
     "@adonisjs/fold": "^9.9.3-2",
-    "@adonisjs/logger": "^5.4.2-0",
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^17.4.4",
     "@japa/assert": "^1.4.1",
@@ -52,13 +50,12 @@
     "@japa/run-failed-tests": "^1.1.1",
     "@japa/runner": "^2.5.1",
     "@japa/spec-reporter": "^1.3.3",
-    "@poppinss/dev-utils": "^2.0.1",
-    "@swc/core": "^1.3.38",
+    "@swc/core": "^1.3.39",
     "@types/node": "^18.15.0",
     "c8": "^7.13.0",
     "cross-env": "^7.0.3",
     "del-cli": "^5.0.0",
-    "eslint": "^8.35.0",
+    "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-adonis": "^3.0.3",
     "eslint-plugin-prettier": "^4.2.1",
@@ -70,6 +67,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@poppinss/utils": "^6.5.0-1",
     "@sindresorhus/is": "^5.3.0",
     "emittery": "^1.0.1"
   },
