--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "type": "module",
   "files": [
     "src",
-    "test_factories",
+    "factories",
     "index.ts",
     "build/src",
-    "build/test_factories",
+    "build/factories",
     "build/index.d.ts",
     "build/index.d.ts.map",
     "build/index.js"
@@ -19,7 +19,7 @@
   },
   "exports": {
     ".": "./build/index.js",
-    "./factories": "./build/test_factories/main.js",
+    "./factories": "./build/factories/main.js",
     "./types": "./build/src/types.js"
   },
   "scripts": {
