chore: add engines to package.json file

--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "./factories": "./build/factories/main.js",
     "./types": "./build/src/types.js"
   },
+  "engines": {
+    "node": ">=18.16.0"
+  },
   "scripts": {
     "pretest": "npm run lint",
     "test": "cross-env NODE_DEBUG=adonisjs:events c8 npm run quick:test",
