--- a/package.json
+++ b/package.json
@@ -43,38 +43,38 @@
   "author": "virk,adonisjs",
   "license": "MIT",
   "devDependencies": {
-    "@adonisjs/application": "^7.1.2-15",
+    "@adonisjs/application": "^8.0.0-0",
     "@adonisjs/eslint-config": "^1.1.8",
-    "@adonisjs/fold": "^9.9.3-8",
+    "@adonisjs/fold": "^9.9.3-10",
     "@adonisjs/prettier-config": "^1.1.8",
     "@adonisjs/tsconfig": "^1.1.8",
-    "@commitlint/cli": "^17.7.1",
-    "@commitlint/config-conventional": "^17.7.0",
-    "@japa/assert": "^2.0.0-1",
-    "@japa/expect-type": "^2.0.0-0",
-    "@japa/file-system": "^2.0.0-1",
-    "@japa/runner": "^3.0.0-3",
+    "@commitlint/cli": "^17.8.0",
+    "@commitlint/config-conventional": "^17.8.0",
+    "@japa/assert": "^2.0.0",
+    "@japa/expect-type": "^2.0.0",
+    "@japa/file-system": "^2.0.0",
+    "@japa/runner": "^3.0.2",
     "@swc/core": "^1.3.78",
-    "@types/node": "^20.5.3",
+    "@types/node": "^20.8.6",
     "c8": "^8.0.1",
     "cross-env": "^7.0.3",
-    "del-cli": "^5.0.0",
-    "eslint": "^8.47.0",
+    "del-cli": "^5.1.0",
+    "eslint": "^8.51.0",
     "github-label-sync": "^2.3.1",
     "husky": "^8.0.3",
     "np": "^8.0.4",
-    "prettier": "^3.0.0",
+    "prettier": "^3.0.3",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@poppinss/utils": "^6.5.0-5",
-    "@sindresorhus/is": "^6.0.0",
+    "@poppinss/utils": "^6.5.0",
+    "@sindresorhus/is": "^6.0.1",
     "emittery": "^1.0.1"
   },
   "peerDependencies": {
-    "@adonisjs/application": "^7.1.2-15",
-    "@adonisjs/fold": "^9.9.3-8"
+    "@adonisjs/application": "^8.0.0-0",
+    "@adonisjs/fold": "^9.9.3-10"
   },
   "repository": {
     "type": "git",
