--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "@japa/expect-type": "^2.0.0",
     "@japa/file-system": "^2.0.0",
     "@japa/runner": "^3.0.2",
-    "@swc/core": "^1.3.78",
+    "@swc/core": "1.3.82",
     "@types/node": "^20.8.6",
     "c8": "^8.0.1",
     "cross-env": "^7.0.3",
