--- a/package.json
+++ b/package.json
@@ -40,39 +40,39 @@
   "author": "virk,adonisjs",
   "license": "MIT",
   "devDependencies": {
-    "@adonisjs/application": "^8.0.0-0",
-    "@adonisjs/eslint-config": "^1.1.8",
-    "@adonisjs/fold": "^9.9.3-10",
-    "@adonisjs/prettier-config": "^1.1.8",
-    "@adonisjs/tsconfig": "^1.1.8",
-    "@commitlint/cli": "^17.8.0",
-    "@commitlint/config-conventional": "^17.8.0",
-    "@japa/assert": "^2.0.0",
+    "@adonisjs/application": "^8.0.0-2",
+    "@adonisjs/eslint-config": "^1.1.9",
+    "@adonisjs/fold": "^9.9.3-11",
+    "@adonisjs/prettier-config": "^1.1.9",
+    "@adonisjs/tsconfig": "^1.1.9",
+    "@commitlint/cli": "^18.4.3",
+    "@commitlint/config-conventional": "^18.4.3",
+    "@japa/assert": "^2.0.1",
     "@japa/expect-type": "^2.0.0",
-    "@japa/file-system": "^2.0.0",
-    "@japa/runner": "^3.0.2",
-    "@swc/core": "1.3.82",
-    "@types/node": "^20.8.6",
+    "@japa/file-system": "^2.0.1",
+    "@japa/runner": "^3.1.0",
+    "@swc/core": "^1.3.99",
+    "@types/node": "^20.9.4",
     "c8": "^8.0.1",
     "cross-env": "^7.0.3",
     "del-cli": "^5.1.0",
-    "eslint": "^8.51.0",
+    "eslint": "^8.54.0",
     "github-label-sync": "^2.3.1",
     "husky": "^8.0.3",
     "np": "^8.0.4",
-    "prettier": "^3.0.3",
+    "prettier": "^3.1.0",
     "ts-node": "^10.9.1",
-    "tsup": "^7.2.0",
-    "typescript": "^5.2.2"
+    "tsup": "^8.0.1",
+    "typescript": "5.2.2"
   },
   "dependencies": {
-    "@poppinss/utils": "^6.5.0",
-    "@sindresorhus/is": "^6.0.1",
+    "@poppinss/utils": "^6.5.1",
+    "@sindresorhus/is": "^6.1.0",
     "emittery": "^1.0.1"
   },
   "peerDependencies": {
-    "@adonisjs/application": "^8.0.0-0",
-    "@adonisjs/fold": "^9.9.3-10"
+    "@adonisjs/application": "^8.0.0-2",
+    "@adonisjs/fold": "^9.9.3-11"
   },
   "repository": {
     "type": "git",
