--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "prepublishOnly": "npm run build",
     "lint": "eslint . --ext=.ts",
     "sync-labels": "github-label-sync --labels .github/labels.json adonisjs/events",
-    "quick:test": "node --loader=ts-node/esm --experimental-import-meta-resolve bin/test.ts"
+    "quick:test": "node --loader=ts-node/esm --experimental-import-meta-resolve --enable-source-maps bin/test.ts"
   },
   "keywords": [
     "emitter",
