--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "prepublishOnly": "npm run build",
     "lint": "eslint . --ext=.ts",
     "sync-labels": "github-label-sync --labels .github/labels.json adonisjs/events",
-    "quick:test": "node --loader=ts-node/esm --experimental-import-meta-resolve --enable-source-maps bin/test.ts"
+    "quick:test": "node --loader=ts-node/esm --enable-source-maps bin/test.ts"
   },
   "keywords": [
     "emitter",
@@ -43,20 +43,21 @@
   "author": "virk,adonisjs",
   "license": "MIT",
   "devDependencies": {
-    "@adonisjs/application": "^8.0.0-3",
-    "@adonisjs/eslint-config": "^1.2.0",
-    "@adonisjs/fold": "^9.9.3-12",
-    "@adonisjs/prettier-config": "^1.2.0",
-    "@adonisjs/tsconfig": "^1.2.0",
-    "@commitlint/cli": "^18.4.3",
-    "@commitlint/config-conventional": "^18.4.3",
+    "@adonisjs/application": "^8.0.0",
+    "@adonisjs/config": "^5.0.0",
+    "@adonisjs/eslint-config": "^1.2.1",
+    "@adonisjs/fold": "^10.0.0",
+    "@adonisjs/prettier-config": "^1.2.1",
+    "@adonisjs/tsconfig": "^1.2.1",
+    "@commitlint/cli": "^18.4.4",
+    "@commitlint/config-conventional": "^18.4.4",
     "@japa/assert": "^2.1.0",
     "@japa/expect-type": "^2.0.1",
-    "@japa/file-system": "^2.1.0",
+    "@japa/file-system": "^2.1.1",
     "@japa/runner": "^3.1.1",
-    "@swc/core": "^1.3.101",
-    "@types/node": "^20.10.5",
-    "c8": "^8.0.1",
+    "@swc/core": "^1.3.102",
+    "@types/node": "^20.10.6",
+    "c8": "^9.0.0",
     "cross-env": "^7.0.3",
     "del-cli": "^5.1.0",
     "eslint": "^8.56.0",
@@ -74,8 +75,8 @@
     "emittery": "^1.0.1"
   },
   "peerDependencies": {
-    "@adonisjs/application": "^8.0.0-3",
-    "@adonisjs/fold": "^9.9.3-12"
+    "@adonisjs/application": "^8.0.0",
+    "@adonisjs/fold": "^10.0.0"
   },
   "repository": {
     "type": "git",
